tests/react_imports/react_imports.exp
Error ------------------------------------------------------------------------------------------- commonjs-pascal.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].

   commonjs-pascal.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:26:15
   26| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   commonjs-pascal.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- commonjs-pascal.js:6:2

Cannot cast object literal to `Node` because:
 - Either property `key` is missing in object literal [1] but exists in `React.Element` [2].
 - Or object literal [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object literal [1] but exists in `$Iterable` [4].

   commonjs-pascal.js:6:2
    6| ({}: React.Node); // Error
        ^^ [1]

References:
   <BUILTINS>/react.js:18:5
   18|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:19:5
   19|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:20:5
   20|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error ------------------------------------------------------------------------------------------- commonjs-pascal.js:7:8

Cannot get `React.Missing` because property `Missing` is missing in module `react` [1].

   commonjs-pascal.js:7:8
     7| (null: React.Missing); // Error
               ^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:413:27
   413|   declare module.exports: $Exports<'react'>;
                                  ^^^^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- commonjs.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].

   commonjs.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:26:15
   26| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   commonjs.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- commonjs.js:6:2

Cannot cast object literal to `Node` because:
 - Either property `key` is missing in object literal [1] but exists in `React.Element` [2].
 - Or object literal [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object literal [1] but exists in `$Iterable` [4].

   commonjs.js:6:2
    6| ({}: React.Node); // Error
        ^^ [1]

References:
   <BUILTINS>/react.js:18:5
   18|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:19:5
   19|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:20:5
   20|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error -------------------------------------------------------------------------------------------------- commonjs.js:7:8

Cannot get `React.Missing` because property `Missing` is missing in module `react` [1].

   commonjs.js:7:8
   7| (null: React.Missing); // Error
             ^^^^^^^^^^^^^

References:
   commonjs.js:1:15
   1| const React = require('react');
                    ^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------- es-default-pascal.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].

   es-default-pascal.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:26:15
   26| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   es-default-pascal.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- es-default-pascal.js:6:2

Cannot cast object literal to `Node` because:
 - Either property `key` is missing in object literal [1] but exists in `React.Element` [2].
 - Or object literal [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object literal [1] but exists in `$Iterable` [4].

   es-default-pascal.js:6:2
    6| ({}: React.Node); // Error: Not in default export.
        ^^ [1]

References:
   <BUILTINS>/react.js:18:5
   18|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:19:5
   19|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:20:5
   20|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error ----------------------------------------------------------------------------------------- es-default-pascal.js:7:8

Cannot get `React.Missing` because property `Missing` is missing in module `react` [1].

   es-default-pascal.js:7:8
     7| (null: React.Missing); // Error: Not in default export.
               ^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:413:27
   413|   declare module.exports: $Exports<'react'>;
                                  ^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ es-default.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].

   es-default.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:26:15
   26| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   es-default.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- es-default.js:5:19

Cannot get `React.Node` because property `Node` is missing in object type [1].

   es-default.js:5:19
     5| ('Hello, world!': React.Node); // Error: Not in default export.
                          ^^^^^^^^^^

References:
   <BUILTINS>/react.js:376:26
                                 v-
   376|   declare export default {|
   377|     +DOM: typeof DOM,
   378|     +PropTypes: typeof PropTypes,
   379|     +version: typeof version,
   380|     +checkPropTypes: typeof checkPropTypes,
   381|     +memo: typeof memo,
   382|     +lazy: typeof lazy,
   383|     +createClass: typeof createClass,
   384|     +createContext: typeof createContext,
   385|     +createElement: typeof createElement,
   386|     +cloneElement: typeof cloneElement,
   387|     +createFactory: typeof createFactory,
   388|     +createRef: typeof createRef,
   389|     +forwardRef: typeof forwardRef,
   390|     +isValidElement: typeof isValidElement,
      :
   393|     +Fragment: typeof Fragment,
   394|     +Children: typeof Children,
   395|     +ConcurrentMode: typeof ConcurrentMode,
   396|     +StrictMode: typeof StrictMode,
   397|     +Suspense: typeof Suspense,
   398|     +useContext: typeof useContext,
   399|     +useState: typeof useState,
   400|     +useReducer: typeof useReducer,
   401|     +useRef: typeof useRef,
   402|     +useEffect: typeof useEffect,
   403|     +useLayoutEffect: typeof useLayoutEffect,
   404|     +useCallback: typeof useCallback,
   405|     +useMemo: typeof useMemo,
   406|     +useImperativeHandle: typeof useImperativeHandle,
   407|   |};
          -^ [1]


Error ------------------------------------------------------------------------------------------------ es-default.js:6:6

Cannot get `React.Node` because property `Node` is missing in object type [1].

   es-default.js:6:6
     6| ({}: React.Node); // Error: Not in default export.
             ^^^^^^^^^^

References:
   <BUILTINS>/react.js:376:26
                                 v-
   376|   declare export default {|
   377|     +DOM: typeof DOM,
   378|     +PropTypes: typeof PropTypes,
   379|     +version: typeof version,
   380|     +checkPropTypes: typeof checkPropTypes,
   381|     +memo: typeof memo,
   382|     +lazy: typeof lazy,
   383|     +createClass: typeof createClass,
   384|     +createContext: typeof createContext,
   385|     +createElement: typeof createElement,
   386|     +cloneElement: typeof cloneElement,
   387|     +createFactory: typeof createFactory,
   388|     +createRef: typeof createRef,
   389|     +forwardRef: typeof forwardRef,
   390|     +isValidElement: typeof isValidElement,
      :
   393|     +Fragment: typeof Fragment,
   394|     +Children: typeof Children,
   395|     +ConcurrentMode: typeof ConcurrentMode,
   396|     +StrictMode: typeof StrictMode,
   397|     +Suspense: typeof Suspense,
   398|     +useContext: typeof useContext,
   399|     +useState: typeof useState,
   400|     +useReducer: typeof useReducer,
   401|     +useRef: typeof useRef,
   402|     +useEffect: typeof useEffect,
   403|     +useLayoutEffect: typeof useLayoutEffect,
   404|     +useCallback: typeof useCallback,
   405|     +useMemo: typeof useMemo,
   406|     +useImperativeHandle: typeof useImperativeHandle,
   407|   |};
          -^ [1]


Error ------------------------------------------------------------------------------------------------ es-default.js:7:8

Cannot get `React.Missing` because property `Missing` is missing in object type [1].

   es-default.js:7:8
     7| (null: React.Missing); // Error: Not in default export.
               ^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:376:26
                                 v-
   376|   declare export default {|
   377|     +DOM: typeof DOM,
   378|     +PropTypes: typeof PropTypes,
   379|     +version: typeof version,
   380|     +checkPropTypes: typeof checkPropTypes,
   381|     +memo: typeof memo,
   382|     +lazy: typeof lazy,
   383|     +createClass: typeof createClass,
   384|     +createContext: typeof createContext,
   385|     +createElement: typeof createElement,
   386|     +cloneElement: typeof cloneElement,
   387|     +createFactory: typeof createFactory,
   388|     +createRef: typeof createRef,
   389|     +forwardRef: typeof forwardRef,
   390|     +isValidElement: typeof isValidElement,
      :
   393|     +Fragment: typeof Fragment,
   394|     +Children: typeof Children,
   395|     +ConcurrentMode: typeof ConcurrentMode,
   396|     +StrictMode: typeof StrictMode,
   397|     +Suspense: typeof Suspense,
   398|     +useContext: typeof useContext,
   399|     +useState: typeof useState,
   400|     +useReducer: typeof useReducer,
   401|     +useRef: typeof useRef,
   402|     +useEffect: typeof useEffect,
   403|     +useLayoutEffect: typeof useLayoutEffect,
   404|     +useCallback: typeof useCallback,
   405|     +useMemo: typeof useMemo,
   406|     +useImperativeHandle: typeof useImperativeHandle,
   407|   |};
          -^ [1]


Error --------------------------------------------------------------------------------------- es-namespace-pascal.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].

   es-namespace-pascal.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:26:15
   26| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   es-namespace-pascal.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error --------------------------------------------------------------------------------------- es-namespace-pascal.js:6:2

Cannot cast object literal to `Node` because:
 - Either property `key` is missing in object literal [1] but exists in `React.Element` [2].
 - Or object literal [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object literal [1] but exists in `$Iterable` [4].

   es-namespace-pascal.js:6:2
    6| ({}: React.Node); // Error
        ^^ [1]

References:
   <BUILTINS>/react.js:18:5
   18|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:19:5
   19|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:20:5
   20|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error --------------------------------------------------------------------------------------- es-namespace-pascal.js:7:8

Cannot get `React.Missing` because property `Missing` is missing in module `React` [1].

   es-namespace-pascal.js:7:8
   7| (null: React.Missing); // Error
             ^^^^^^^^^^^^^

References:
   es-namespace-pascal.js:1:1
   1| import * as React from 'React';
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- es-namespace.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].

   es-namespace.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:26:15
   26| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   es-namespace.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es-namespace.js:6:2

Cannot cast object literal to `Node` because:
 - Either property `key` is missing in object literal [1] but exists in `React.Element` [2].
 - Or object literal [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object literal [1] but exists in `$Iterable` [4].

   es-namespace.js:6:2
    6| ({}: React.Node); // Error
        ^^ [1]

References:
   <BUILTINS>/react.js:18:5
   18|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:19:5
   19|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:20:5
   20|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------------- es-namespace.js:7:8

Cannot get `React.Missing` because property `Missing` is missing in module `react` [1].

   es-namespace.js:7:8
   7| (null: React.Missing); // Error
             ^^^^^^^^^^^^^

References:
   es-namespace.js:1:1
   1| import * as React from 'react';
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]



Found 19 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
